--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,12 +29,9 @@ repos:
       - id: flake8
         additional_dependencies: [flake8-docstrings]
 
-  # Note: mypy is available but not enabled in pre-commit by default
-  # Run manually with: mypy tictoc/
-  # Uncomment below to enable (may require fixing type errors first):
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.8.0
-  #   hooks:
-  #     - id: mypy
-  #       additional_dependencies: [types-requests]
-  #       args: [--ignore-missing-imports, --no-strict-optional]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-requests]
+        args: [--ignore-missing-imports, --no-strict-optional]
