--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        additional_dependencies: [flake8-docstrings]
+        additional_dependencies: [flake8-docstrings, Flake8-pyproject]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
