--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,19 +80,14 @@ ensure_newline_before_comments = true
 
 [tool.mypy]
 python_version = "3.10"
-warn_return_any = false
 warn_unused_configs = true
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
-check_untyped_defs = false
-disallow_untyped_decorators = false
-no_implicit_optional = false
-warn_redundant_casts = false
-warn_unused_ignores = false
-warn_no_return = false
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_no_return = true
 follow_imports = "normal"
-ignore_missing_imports = true
-strict_optional = false
+strict_optional = true
 
 [tool.pylint.messages_control]
 max-line-length = 88
@@ -109,7 +104,10 @@ max-line-length = 88
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = ["E203", "E266", "E501", "W503", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D205", "D209", "D400", "D401"]
+extend-ignore = ["E203", "E266", "W503"]
+per-file-ignores = [
+    "__init__.py:F401",
+]
 exclude = [
     ".git",
     "__pycache__",
@@ -120,9 +118,4 @@ exclude = [
     "*.egg-info",
     ".tox",
     ".mypy_cache",
-]
-per-file-ignores = [
-    "__init__.py:F401",
-    "plot.py:F401",
-    "tictoc/Benchmarker.py:F401",
 ]
