--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-docstrings, Flake8-pyproject]
+        exclude: ^tests/
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
@@ -35,3 +36,4 @@ repos:
       - id: mypy
         additional_dependencies: [types-requests]
         args: [--ignore-missing-imports, --no-strict-optional]
+        exclude: ^tests/
